@@ -20,8 +20,8 @@
  *
  * #include <Rmath.h>
  *
- * double pbeta_raw(double x, double pin, double qin, int lower_tail, int log_p)
- * double pbeta	   (double x, double pin, double qin, int lower_tail, int log_p)
+ * double pbeta_raw(double x, double a, double b, int lower_tail, int log_p)
+ * double pbeta	   (double x, double a, double b, int lower_tail, int log_p)
  *
  *  DESCRIPTION
  *
@@ -37,30 +37,52 @@
 #include "nmath.h"
 #include "dpq.h"
 
-attribute_hidden double pbeta_raw(double x, double pin, double qin, int lower_tail, int log_p)
+attribute_hidden double pbeta_raw(double x, double a, double b, int lower_tail, int log_p)
 {
+    // treat limit cases correctly here:
+    if (a == 0 || b == 0 || !R_FINITE(a) || !R_FINITE(b))
+    {
+        // NB:  0 < x < 1 :
+        if (a == 0 && b == 0) // point mass 1/2 at each of {0,1} :
+            return (log_p ? -M_LN2 : 0.5);
+        if (a == 0 || a / b == 0) // point mass 1 at 0 ==> P(X <= x) = 1, all x > 0
+            return R_DT_1;
+        if (b == 0 || b / a == 0) // point mass 1 at 1 ==> P(X <= x) = 0, all x < 1
+            return R_DT_0;
+        // else, remaining case:  a = b = Inf : point mass 1 at 1/2
+        if (x < 0.5)
+            return R_DT_0;
+        // else,  x >= 0.5 :
+        return R_DT_1;
+    }
+    // Now:  0 < a < Inf;  0 < b < Inf
+
     double x1 = 0.5 - x + 0.5, w, wc;
     int ierr;
-    bratio(pin, qin, x, x1, &w, &wc, &ierr, log_p); /* -> ./toms708.c */
+    //====
+    bratio(a, b, x, x1, &w, &wc, &ierr, log_p); /* -> ./toms708.c */
+    //====
     // ierr = 8 : inaccuracy in extreme cases in bgrat(); we warn *there*
     if (ierr && (ierr != 8 || log_p))
         MATHLIB_WARNING(_("pbeta_raw() -> bratio() gave error code %d"), ierr);
     return lower_tail ? w : wc;
 } /* pbeta_raw() */
 
-double pbeta(double x, double pin, double qin, int lower_tail, int log_p)
+double pbeta(double x, double a, double b, int lower_tail, int log_p)
 {
 #ifdef IEEE_754
-    if (ISNAN(x) || ISNAN(pin) || ISNAN(qin))
-        return x + pin + qin;
+    if (ISNAN(x) || ISNAN(a) || ISNAN(b))
+        return x + a + b;
 #endif
 
-    if (pin <= 0 || qin <= 0)
+    if (a < 0 || b < 0)
         ML_ERR_return_NAN;
+    // allowing a==0 and b==0  <==> treat as one- or two-point mass
 
     if (x <= 0)
         return R_DT_0;
     if (x >= 1)
         return R_DT_1;
-    return pbeta_raw(x, pin, qin, lower_tail, log_p);
+
+    return pbeta_raw(x, a, b, lower_tail, log_p);
 }
